@@ -165,7 +165,8 @@ RELEASE 0.97 - XXX
   - Use the source_scanner from the target Node, not the source node
     itself.
 
-  - Enforce internally that Scanners are only passed Nodes.
+  - Enforce internally that Scanners are only passed Nodes.  Fix how a
+    Scanner.Selector called its base class initialization.
 
   From Christoph Wiedemann:
 
